--- a/bootstrap/root-app.yaml
+++ b/bootstrap/root-app.yaml
@@ -9,6 +9,8 @@ spec:
     repoURL: https://github.com/JohnMichaelWalker/k3s-lab-argo
     targetRevision: main
     path: apps
+    directory:
+      recurse: true
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
