fix kube prom stack

--- a/apps/kube-prometheus-stack/dev.yaml
+++ b/apps/kube-prometheus-stack/dev.yaml
@@ -12,6 +12,10 @@ spec:
     helm:
       releaseName: kube-prometheus-stack
       values: |
+        prometheusOperator:
+          admissionWebhooks:
+            enabled: false
+              
         prometheus:
           prometheusSpec:
             retention: 15d
