--- a/k8s/cloudflared/configmap.yaml
+++ b/k8s/cloudflared/configmap.yaml
@@ -7,4 +7,6 @@ data:
   config.yml: |
     tunnel: 0186a39a-4077-4831-866c-f98bdeb42147
     ingress:
+      - hostname: app.johnwalkers.com
+        service: http://k3s-ui.k3s-ui.svc.cluster.local:80
       - service: http_status:404
