fix aws-ebs-csi-driver to 2.49.1 and ignore changes to nodeAllocatableUpdatePeriodSeconds as it looks like it's changing and breaking argo

--- a/deploy/apps/aws-ebs-csi-driver.yaml
+++ b/deploy/apps/aws-ebs-csi-driver.yaml
@@ -40,6 +40,12 @@ spec:
             reclaimPolicy: Delete
             volumeBindingMode: WaitForFirstConsumer
             allowVolumeExpansion: true
+  ignoreDifferences:
+    - group: storage.k8s.io
+      kind: CSIDriver
+      name: ebs.csi.aws.com
+      jsonPointers:
+        - /spec/nodeAllocatableUpdatePeriodSeconds
   syncPolicy:
     automated:
       prune: true
