--- a/deploy/apps/kube-prometheus-stack.yaml
+++ b/deploy/apps/kube-prometheus-stack.yaml
@@ -21,12 +21,12 @@ spec:
           limits:   { cpu: 200m, memory: 256Mi }
         
         medium: &medium
-          requests: { cpu: 250m, memory: 512Mi }
+          requests: { cpu: 150m, memory: 512Mi }
           limits:   { cpu: "1",  memory: 1Gi }
         
         medium: &large
-          requests: { cpu: "1", memory: 1Gi }
-          limits:   { cpu: "2",  memory: 2Gi }
+          requests: { cpu: "200m", memory: 1Gi }
+          limits:   { cpu: "1",  memory: 2Gi }
         
         prometheusOperator:
           resources: *small
