--- a/deploy/apps/kube-prometheus-stack.yaml
+++ b/deploy/apps/kube-prometheus-stack.yaml
@@ -13,7 +13,7 @@ spec:
       releaseName: kube-prometheus-stack
       values: |
         x-small: &xsmall
-          requests: { cpu: 25m,, memory: 64Mi }
+          requests: { cpu: 25m, memory: 64Mi }
           limits:   { cpu: 200m, memory: 128Mi }
         
         small: &small
