fix kube prom yaml

--- a/deploy/apps/kube-prometheus-stack.yaml
+++ b/deploy/apps/kube-prometheus-stack.yaml
@@ -54,6 +54,7 @@ spec:
         alertmanager:  
           alertmanagerSpec:
             resources: *medium
+            storageSpec:
               storage:
                 volumeClaimTemplate:
                   spec:
