--- a/deploy/apps/kube-prometheus-stack.yaml
+++ b/deploy/apps/kube-prometheus-stack.yaml
@@ -57,7 +57,7 @@ spec:
             storageSpec:
               volumeClaimTemplate:
                 spec:
-                  storageClassName: gp3-encrypted
+                  storageClassName: ebs-gp3
                   accessModes: ["ReadWriteOnce"]
                   resources:
                     requests:
