--- a/k8s/cloudflared/configmap.yaml
+++ b/k8s/cloudflared/configmap.yaml
@@ -13,4 +13,6 @@ data:
         service: http://k3s-ui.k3s-ui.svc.cluster.local:80
       - hostname: johnwalkers.com
         service: http://k3s-ui.k3s-ui.svc.cluster.local:80
+      - hostname: petunia.johnwalkers.com
+        service: http://petunia-service.garden.svc.cluster.local
       - service: http_status:404
