--- a/k8s/cloudflared/configmap.yaml
+++ b/k8s/cloudflared/configmap.yaml
@@ -14,5 +14,5 @@ data:
       - hostname: johnwalkers.com
         service: http://k3s-ui.k3s-ui.svc.cluster.local:80
       - hostname: petunia.johnwalkers.com
-        service: http://petunia-service.garden.svc.cluster.local
+        service: http://petunia-service.garden.svc.cluster.local:80
       - service: http_status:404
